--- a/chackDeployment.yaml
+++ b/chackDeployment.yaml
@@ -22,3 +22,19 @@ spec:
           value: "true"
         - name: ENABLE_RCON
           value: "true"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: chack-mcs-service
+spec:
+  ports:
+    - name: default
+      port: 25565
+      targetPort: 25565
+    - name: rcon
+      port: 25575
+      targetPort: 25575
+  selector:
+    app: chack-minecraft
+  type: LoadBalancer
